--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ EXTRA REGELS:
 - Als er iets ondertekend of teruggestuurd moet worden, zeg dat altijd als eerste actiepunt`;
 
     try {
-      const response = await fetch('https://api.anthropic.com/v1/messages', {
+      const response = await fetch('/api/chat', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
