--- a/index.html
+++ b/index.html
@@ -810,6 +810,8 @@ const sections = [
   { key: 'WAT ALS JE NIETS DOET?', label: 'Wat als je niets doet?', isAction: false },
 ];
 text = text.replace(/\*\*/g, '').replace(/##/g, '').trim();
+    console.log('OUTPUT:', text);
+    
     let html = '';
     let firstBlock = true;
 
