--- a/index.html
+++ b/index.html
@@ -789,8 +789,8 @@ EXTRA REGELS:
   })
 });
       if (!response.ok) throw new Error(response.status);
-      const data = await response.json();
-const text = data.content?.find(b => b.type === 'text')?.text || data.error?.message || 'Geen antwoord ontvangen';
+      const text = data.content?.find(b => b.type === 'text')?.text || data.error?.message || 'Geen antwoord ontvangen';
+alert(text.substring(0, 500));
 renderOutput(text);
       
     } catch (err) {
