--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 
 <div class="hero">
   <h1><span class="h1-main">Snap wat er staat.</span><br><em class="h1-sub">En wat je moet doen.</em></h1>
-  <p>Ontvang je een moeilijke brief, mail, contract of besluit van een organisatie of instantie? Plak de tekst hieronder en krijg meteen uitleg in gewone taal &mdash; inclusief wat je concreet moet doen.</p>
+  <p>Ontvang je een brief, mail, contract of besluit die je niet goed begrijpt? Plak de tekst hieronder en ontdek direct wat er staat en wat je kunt doen.</p>
 </div>
 
 <div class="tool-wrapper">
@@ -766,10 +766,10 @@
   <div class="input-card">
     <div class="tab-panel active" id="tab-text">
       <div class="input-top">
-        <span class="input-label">Plak hier je brief of mail</span>
+        <span class="input-label">Plak hier je tekst</span>
         <span class="char-count" id="charCount">0 tekens</span>
       </div>
-      <textarea id="briefText" placeholder="Kopieer de volledige tekst van je brief of mail en plak hem hier..." oninput="updateCount()"></textarea>
+      <textarea id="briefText" placeholder="Plak hier de tekst van je brief, mail, contract of besluit..." oninput="updateCount()"></textarea>
     </div>
     <div class="tab-panel" id="tab-pdf">
       <label class="upload-zone" for="pdfInput">
@@ -835,7 +835,7 @@
     <div class="output-header">
       <div class="output-check" style="background:#e8f0fe;color:#1a56db">✍</div>
       <span class="output-header-text schrijfdit-brand-header">SchrijfDit</span>
-      <span class="output-header-sub">jouw reactie in gewone taal</span>
+      <span class="output-header-sub">Jouw reactie in gewone taal</span>
     </div>
     <div class="schrijfdit-form">
       <div class="schrijfdit-question">Wat wil je zeggen of vragen?</div>
@@ -1028,7 +1028,7 @@ EXTRA REGELS:
 - Als een datum of bedrag in de brief staat, benoem die altijd expliciet
 - Als er iets ondertekend of teruggestuurd moet worden, zeg dat altijd als eerste actiepunt
 - Als er een referentienummer, kenmerk, zaaknummer of relatienummer in de brief staat: noem dit ALTIJD in "WAT STAAT ER?", in de actiepunten, én in "Bij twijfel:"
-- Bij twijfel: schrijf ALTIJD het telefoonnummer uit de brief erbij, plus het kenmerk/zaaknummer. Bijvoorbeeld: "Bij twijfel: bel 14058 en noem zaaknummer GM-2025-029021."
+- Bij twijfel: schrijf ALTIJD een specifiek telefoonnummer, e-mailadres of webadres uit de brief. NOOIT alleen een naam zoals "ga naar Belastingdienst" — altijd een concreet contactgegeven plus het kenmerk/zaaknummer. Voorbeeld: "Bij twijfel: bel 055-5802800 en noem kenmerk 1012.82.345." Als er geen contactgegeven in de brief staat: "Bij twijfel: neem contact op met [naam instantie] via hun website."
 - Gebruik NOOIT asterisks (*) of markdown opmaak in je antwoord
 - Schrijf de vier kopjes EXACT zo: WAT STAAT ER? / WAT MOET JE DOEN? / WAT KAN WACHTEN? / WAT ALS JE NIETS DOET?
 - Zet actiepunten ALTIJD als genummerde lijst: 1. tekst, 2. tekst, etc.`;
