--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 
 <div class="hero">
   <h1><span class="h1-main">Snap wat er staat.</span><br><em class="h1-sub">En wat je moet doen.</em></h1>
-  <p>Ontvang je een brief, mail, contract of besluit die je niet goed begrijpt? Plak de tekst hieronder en ontdek direct wat er staat en wat je kunt doen.</p>
+  <p>Ontvang je een brief, mail, contract of besluit die je niet goed begrijpt? Deel de tekst hieronder en weet direct wat er staat en wat je kunt doen.</p>
 </div>
 
 <div class="tool-wrapper">
@@ -766,7 +766,7 @@
   <div class="input-card">
     <div class="tab-panel active" id="tab-text">
       <div class="input-top">
-        <span class="input-label">Plak hier je tekst</span>
+        <span class="input-label">Deel hier je tekst</span>
         <span class="char-count" id="charCount">0 tekens</span>
       </div>
       <textarea id="briefText" placeholder="Plak hier de tekst van je brief, mail, contract of besluit..." oninput="updateCount()"></textarea>
@@ -1028,7 +1028,7 @@ EXTRA REGELS:
 - Als een datum of bedrag in de brief staat, benoem die altijd expliciet
 - Als er iets ondertekend of teruggestuurd moet worden, zeg dat altijd als eerste actiepunt
 - Als er een referentienummer, kenmerk, zaaknummer of relatienummer in de brief staat: noem dit ALTIJD in "WAT STAAT ER?", in de actiepunten, én in "Bij twijfel:"
-- Bij twijfel: schrijf ALTIJD een specifiek telefoonnummer, e-mailadres of webadres uit de brief. NOOIT alleen een naam zoals "ga naar Belastingdienst" — altijd een concreet contactgegeven plus het kenmerk/zaaknummer. Voorbeeld: "Bij twijfel: bel 055-5802800 en noem kenmerk 1012.82.345." Als er geen contactgegeven in de brief staat: "Bij twijfel: neem contact op met [naam instantie] via hun website."
+- Bij twijfel: schrijf hier een CONCRETE zin met een telefoonnummer of e-mailadres UIT DE BRIEF zelf, plus het kenmerk of zaaknummer. Schrijf dus NOOIT alleen "ga naar [instantie]" of "neem contact op met [instantie]" zonder contactgegevens. Als er een telefoonnummer in de brief staat: gebruik dat. Als er een e-mailadres is: gebruik dat. En voeg altijd het kenmerk/zaaknummer toe dat in de brief staat. Voorbeeld bij belastingbrief met kenmerk: "Bij twijfel: bel de Belastingdienst en vermeld kenmerk 1012.82.345.F.01.5270."
 - Gebruik NOOIT asterisks (*) of markdown opmaak in je antwoord
 - Schrijf de vier kopjes EXACT zo: WAT STAAT ER? / WAT MOET JE DOEN? / WAT KAN WACHTEN? / WAT ALS JE NIETS DOET?
 - Zet actiepunten ALTIJD als genummerde lijst: 1. tekst, 2. tekst, etc.`;
